--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Avtandil03.github.io/react-learn",
+  "homepage": "http://Avtandil03.github.io/react-learn/",
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
